overflow fixed

--- a/styles/cookieConsent.module.scss
+++ b/styles/cookieConsent.module.scss
@@ -12,6 +12,10 @@
     right: 1rem;
     max-width: 28rem;
   }
+
+  @media (max-width: 768px) {
+    max-width: 95vw;
+  }
 }
 
 .alert {
